// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: sidebar should write sidebar for exports' 1`] = `
"## typedoc-plugin-markdown

- [Home](../wiki/Home)
- [Exports](../wiki/Exports)

### Namespaces

- [namespaceA](../wiki/Namespace:%20namespaceA)
- [namespaceB](../wiki/Namespace:%20namespaceB)

### Enumerations

- [enumItemA](../wiki/Enumeration:%20enumItemA)
- [enumItemB](../wiki/Enumeration:%20enumItemB)

### Classes

- [ClassItemA](../wiki/Class:%20ClassItemA)
- [ClassItemB](../wiki/Class:%20ClassItemB)
- [SomeNestedClass](../wiki/Class:%20SomeNestedClass)

### Interfaces

- [InterfaceItemA](../wiki/Interface:%20InterfaceItemA)
- [InterfaceItemB](../wiki/Interface:%20InterfaceItemB)
"
`;

exports[`Theme: sidebar should write sidebar for modules' 1`] = `
"## typedoc-plugin-markdown


### Modules

- [breadcrumbs](../wiki/Module:%20breadcrumbs)
- [theme](../wiki/Module:%20theme)

### Namespaces

- [namespaceA](../wiki/Namespace:%20namespaceA)
- [namespaceB](../wiki/Namespace:%20namespaceB)

### Enumerations

- [enumItemA](../wiki/Enumeration:%20enumItemA)
- [enumItemB](../wiki/Enumeration:%20enumItemB)

### Classes

- [Breadcrumbs](../wiki/Class:%20Breadcrumbs)
- [ClassItemA](../wiki/Class:%20ClassItemA)
- [ClassItemB](../wiki/Class:%20ClassItemB)
- [SomeNestedClass](../wiki/Class:%20SomeNestedClass)

### Interfaces

- [InterfaceItemA](../wiki/Interface:%20InterfaceItemA)
- [InterfaceItemB](../wiki/Interface:%20InterfaceItemB)
"
`;

exports[`Theme: url should getUrls' 1`] = `
Array [
  "Exports.md",
  "Exports.md#declarationitema",
  "Exports.md#declarationitemb",
  "Exports.md#functionitema",
  "Exports.md#functionitemb",
  "Home.md",
  "Exports.md#declarationitema",
  "Exports.md#declarationitemb",
  "Exports.md#functionitema",
  "Exports.md#functionitemb",
  "Namespace: namespaceA.md",
  "Class: SomeNestedClass.md",
  "Class: SomeNestedClass.md#constructor",
  "Namespace: namespaceB.md",
  "Enumeration: enumItemA.md",
  "Enumeration: enumItemB.md",
  "Class: ClassItemA.md",
  "Class: ClassItemA.md#constructor",
  "Class: ClassItemB.md",
  "Class: ClassItemB.md#constructor",
  "Interface: InterfaceItemA.md",
  "Interface: InterfaceItemA.md#prop",
  "Interface: InterfaceItemB.md",
  "Interface: InterfaceItemB.md#prop",
]
`;
